# syrup-n-waffles

./: CMakeLists.txt  Makefile  README.md  run.sh
src/: main.cpp  secret.cpp  secret.h  waffle.cpp  waffle.h
